--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     /* ===== Слои ===== */
-    .layer-fx { z-index: 2; pointer-events: none; }
+    .layer-fx { z-index: 3; pointer-events: none; }
     .layer-monsters-shadow { z-index: 0; pointer-events: none; }
     .layer-monsters { z-index: 1; pointer-events: none; }
     .layer-checker { z-index: 5; }
@@ -127,19 +127,17 @@
     }
 
     /* ===== Эффекты (Tickets, Berets, Bubbles) ===== */
-  .fx-container {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  overflow: hidden;
-  pointer-events: none;
-  z-index: 10; /* <-- выше монстров */
-}
-.ticket img, .beret img {
-  width: 80px; /* билеты крупнее */
-  opacity: 0.9;
-}
-
+    .fx-container {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+      pointer-events: none;
+      z-index: 3;
+    }
+    .ticket img, .beret img {
+      width: 80px;
+      opacity: 0.9;
     }
     .bubble {
       width: 20px; height: 20px;
@@ -209,7 +207,7 @@
         if (e.key === "Enter") checkWallet();
       });
 
-      startFX(); // эффекты
+      startFX(); // запускаем эффекты
     });
 
     async function loadWhitelist() {
@@ -259,36 +257,24 @@
     function startFX() {
       const fx = document.getElementById("fx");
 
-    function spawnTicket() {
-  const el = document.createElement("div");
-  el.className = "ticket";
-  el.style.left = Math.random() * 100 + "vw";
-  el.style.top = "-10%";
-  el.style.transform = `rotate(${Math.random() * 60 - 30}deg)`; // случайный угол
-  el.style.animation = `fall ${6 + Math.random() * 4}s linear forwards`;
-  el.innerHTML = `<img src="ticket.png" alt="ticket">`;
-  fx.appendChild(el);
-  setTimeout(() => el.remove(), 10000);
-}
-
-function spawnBeret() {
-  const el = document.createElement("div");
-  el.className = "beret";
-  el.style.left = Math.random() * 100 + "vw";
-  el.style.top = "-10%";
-  el.style.transform = `rotate(${Math.random() * 360}deg)`; // случайный поворот
-  el.style.animation = `fall ${5 + Math.random() * 5}s linear forwards`;
-  el.innerHTML = `<img src="beret.png" alt="beret">`;
-  fx.appendChild(el);
-  setTimeout(() => el.remove(), 10000);
-}
-
+      function spawnTicket() {
+        const el = document.createElement("div");
+        el.className = "ticket";
+        el.style.left = Math.random() * 100 + "vw";
+        el.style.top = "-10%";
+        el.style.transform = `rotate(${Math.random() * 60 - 30}deg)`;
+        el.style.animation = `fall ${6 + Math.random() * 4}s linear forwards`;
+        el.innerHTML = `<img src="ticket.png" alt="ticket">`;
+        fx.appendChild(el);
+        setTimeout(() => el.remove(), 10000);
+      }
 
       function spawnBeret() {
         const el = document.createElement("div");
         el.className = "beret";
         el.style.left = Math.random() * 100 + "vw";
         el.style.top = "-10%";
+        el.style.transform = `rotate(${Math.random() * 360}deg)`;
         el.style.animation = `fall ${5 + Math.random() * 5}s linear forwards`;
         el.innerHTML = `<img src="beret.png" alt="beret">`;
         fx.appendChild(el);
@@ -312,4 +298,3 @@ function spawnBeret() {
   </script>
 </body>
 </html>
-
