--- a/index.html
+++ b/index.html
@@ -215,16 +215,25 @@
     // ==== Чекер ====
     let whitelist = [];
     async function loadWhitelist() {
-      try {
-        const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR7fSRfFR8_HLtisRRchcKyifgwyI3VxuOd727mczJRSsyMQH2M0wKowB9luUWP8Q-oJsMv34_7o1Gi/pub?output=csv";
-        const url = "https://corsproxy.io/?" + encodeURIComponent(SHEET_URL + "&t=" + Date.now());
-        const res = await fetch(url, { cache: "no-store" });
-        const csvText = await res.text();
-        whitelist = csvText.split(/\r?\n/).map(l => l.split(",")[0].trim().toLowerCase()).filter(Boolean);
-      } catch (err) {
-        console.error("Whitelist load error:", err);
-      }
-    }
+  try {
+    const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR7fSRfFR8_HLtisRRchcKyifgwyI3VxuOd727mczJRSsyMQH2M0wKowB9luUWP8Q-oJsMv34_7o1Gi/pub?output=csv";
+    const url = "https://corsproxy.io/?" + encodeURIComponent(SHEET_URL + "&t=" + Date.now());
+    const res = await fetch(url, { cache: "no-store" });
+    let csvText = await res.text();
+
+    // Убираем BOM и разбиваем построчно
+    csvText = csvText.replace(/^\uFEFF/, "");
+    whitelist = csvText
+      .split(/\r?\n/)                     // делим на строки
+      .map(l => l.split(",")[0])          // берём первый столбец
+      .map(s => s.replace(/['"]+/g, ""))  // убираем кавычки
+      .map(s => s.trim().toLowerCase())   // чистим пробелы
+      .filter(Boolean);                   // убираем пустые
+    console.log("Whitelist loaded:", whitelist);
+  } catch (err) {
+    console.error("Whitelist load error:", err);
+  }
+}
 
     function checkWallet() {
       const inputEl = document.getElementById("walletInput");
@@ -249,3 +258,4 @@
   </script>
 </body>
 </html>
+
